--- a/static-site/css/custom.css
+++ b/static-site/css/custom.css
@@ -5,3 +5,10 @@
 .bg-black code {
   background-color: #333;
 }
+
+h1 code { font-weight: 400; }
+
+img {
+  width: 100%;
+  margin-bottom: 4rem;
+}
