--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -55,12 +55,6 @@
 
   .employee-directory {
     margin: 0 auto;
-    flex-wrap: wrap;
-    &>* {
-      flex: 1 1 30%;
-      margin: 32px;
-      flex-shrink: 0;
-    }
     p {
       margin-block-start: 0;
       margin-block-end: 0;
@@ -70,7 +64,8 @@
       max-width: 256px;
     }
     section {
-      max-width: 35%;
+      flex-basis: 100%;
+      flex: 1;
     }
   }
 
@@ -82,29 +77,16 @@
 
 
 @media screen and (max-width: 60em) {
-  .employee-directory {
-    margin: 0 auto;
-  }
   aside#graphic {
     margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 46.875em) {
-  .employee-directory {
-    text-align: left;
-    margin: 0;
-    section {
-      max-width: 37%;
-    }
-  }
 }
 
-  @media screen and (max-width: 34.375em) {
-    aside#graphic {
-      margin-left: -2rem;
-    }
-    .employee-directory section {
-      max-width: 42%;
-    }
+@media screen and (max-width: 34.375em) {
+  aside#graphic {
+    margin-left: -2rem;
   }
+}
