Gentle margin/padding tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <p>This new computer is <a href="https://urbit.org">Urbit</a>, and it may be the last computer you'll ever need.</p>
         </section>
         <section class="mt12-l mt12-xl mt6-m mt4">
-            <p class="mb8">We're Hiring</p>
+            <p class="mb4">We're Hiring</p>
             <p>Software Engineers -</p>
             <ul>
             <li>Learn software and system requirements from project manager.</li>
@@ -44,7 +44,7 @@
             {% else %}
             <div style="background: transparent; height: 256px; width: 256px;"></div>
             {% endif %}
-            <p>{{ person.name }}</p>
+            <p class="pt1">{{ person.name }}</p>
             <address>{{ person.ship }}</address>
             <p>{{ person.dept }}</p>
         </section>
