--- a/templates/index.html
+++ b/templates/index.html
@@ -6,20 +6,14 @@
         <title>Tlon</title>
     </head>
     <body class="flex-auto pa5">
-        <aside id="graphic" class="absolute-l absolute-xl relative w-third-l w-third-xl w-100 w-100-m">
-                <img class="absolute" style="left: 10%;top: 14%;" src="/Group 23.3.svg">
-                <img class="absolute" style="top: -6%;left: 49%;" src="/Ellipse-1.svg">
-                <img class="absolute" style="top: 6%;left: 49%;" src="/Ellipse-2.svg">
-                <img class="absolute" style="top: 21%;left: 49%;" src="/Ellipse-3.svg">
-                <img class="absolute" style="top: 38%;left: 49%;" src="/Ellipse-4.svg">
-                <img class="absolute" style="top: 53.5%;left: 49%;" src="/Ellipse-5.svg">
-        </aside>
         <main class="mt3">
-        <section class="w-third-l w-third-xl w-100">
-            <p>Tlon is building an entirely new kind of personal computer and operating system.</p>
-            <p>This new computer is <a href="https://urbit.org">Urbit</a>, and it may be the last computer you'll ever need.</p>
+        <section class="w-75-l w-75-xl w-60 mt3 mt0-xl mt0-l mt0-m">
+            <p><b>Tlon</b> is building the platform for a new peer to peer internet.</p>
+            <p>This platform is <a href="https://urbit.org">Urbit</a>.</p>
+            <p>Tlon is equal parts Bell Labs and Bauhaus. We make things that are technically excellent, architecturally sound, and aesthetically beautiful. </p>
+            <p>Smart, motivated people should <span class="mono">apply@tlon.io</span>.</p>
         </section>
-        <section class="employee-directory items-center w-75-l w-75-xl w-60 mt3 mt0-xl mt0-l mt0-m tc flex flex-wrap flex-row">
+        <section class="employee-directory w-75-l w-75-xl w-60 mt8 tc flex flex-wrap flex-row">
         {% for person in config.extra.roster %}
         <section class="ma2 dib tl flex flex-column">
             {% if person.pic %}
@@ -34,8 +28,7 @@
         {% endfor %}
         </section>
     </main>
-    <footer class="mt9">
-        <h2 class="tc fw4 mb8">Want to work with us? Try <address class="di">apply@tlon.io</address>.</h2>
+    <footer class="mt8">
         <a href="https://urbit.org/privacy">Privacy Policy</a><a class="ml4" href="https://urbit.org/toc">Terms of Service</a>
     </footer>
     </body>
