--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <section class="w-75-l w-75-xl w-60 mt3 mt0-xl mt0-l mt0-m">
             <p><b>Tlon</b> is building the platform for a new peer to peer internet.</p>
             <p>This platform is <a href="https://urbit.org">Urbit</a>.</p>
-            <p>Tlon is equal parts Bell Labs and Bauhaus. We make things that are technically excellent, architecturally sound, and aesthetically beautiful. </p>
+            <p>We make things that are technically excellent, architecturally sound, and aesthetically beautiful. </p>
             <p>Smart, motivated people should <span class="mono">apply@tlon.io</span>.</p>
         </section>
         <section class="employee-directory w-75-l w-75-xl w-60 mt8 tc flex flex-wrap flex-row">
