--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer class="mt8">
-        <a href="https://urbit.org/privacy">Privacy Policy</a><a class="ml4" href="https://urbit.org/toc">Terms of Service</a>
+        <a href="https://urbit.org/privacy">Privacy Policy</a><a class="ml4" href="https://urbit.org/terms-of-use/">Terms of Service</a>
     </footer>
     </body>
 </html>
