tlon.io: remove depts

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
         <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
         <link href="/styles.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width">
-        <title>Tlon</title>
+        <title>Tlon Corporation</title>
     </head>
     <body class="flex-auto pa5">
         <main class="mt3">
@@ -23,7 +23,6 @@
             {% endif %}
             <p class="pt1">{{ person.name }}</p>
             <address>{{ person.ship }}</address>
-            <p>{{ person.dept }}</p>
         </section>
         {% endfor %}
         </section>
