--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -37,15 +37,19 @@
   font-weight: 700;
 }
 
-body {
+html, body {
+  height: 100%;
   font-family: "Inter", "Inter UI", sans-serif;
-  @extend .lh-copy;
+  @extend .lh-copy, .f7;
   -webkit-font-smoothing: antialiased;
+}
+
+main {
+  min-height: 100%;
 }
 
 a {
   color: black;
-  border-bottom: 1px solid black;
   text-decoration: none;
 }
 
@@ -55,14 +59,31 @@ address,
   font-style: normal;
 }
 
-.employee-directory {
-  p {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin: 0;
-    display: block;
-  }
-  img {
-    max-width: 256px;
-  }
+footer {
+  margin-top: -2rem;
+}
+
+// new indigo colours
+.new-green1 {
+  color: #009F65;
+}
+
+.bg-custom-green1 {
+  background-color: #33b284;
+}
+
+.b--custom-gray4 {
+  border-color: #ccc;
+}
+
+input[type=email] + span::before {
+  position: absolute;
+  right: 8px;
+  top: -2px;
+}
+
+input[type=email]:valid + span::before {
+  content: '✓';
+  font-family: 'Inter', 'Inter UI', sans-serif;
+  @extend .new-green1;
 }
