--- a/sass/indigo.scss
+++ b/sass/indigo.scss
@@ -607,7 +607,7 @@ input[type="tel"], input[type="text"], input[type="url"], .border-box { box-sizi
 .fr { float: right; _display: inline; }
 .fn { float: none; }
 .sans-serif { font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif; }
-.serif { font-family: georgia, times, serif; }
+.serif { font-family: 'Untitled', georgia, times, serif; }
 .system-sans-serif { font-family: sans-serif; }
 .system-serif { font-family: serif; }
 code, .code { font-family: Consolas, monaco, monospace; }
