--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,68 @@
         <meta name="viewport" content="width=device-width">
         <title>Tlon Corporation</title>
     </head>
-    <body class="flex-auto pa7">
-        <main class="mt3">
-        <section class="measure-wide mt3 mt0-xl mt0-l mt0-m">
-            <p>Tlon is building the platform for a new peer to peer internet.</p>
-            <p>This platform is <a class="bb" href="https://urbit.org">Urbit</a>.</p>
-            <p>We make things that are technically excellent, architecturally sound, and aesthetically beautiful. </p>
+    <body class="flex-auto f6">
+        <section class="measure-wide center tc mt10">
+            <p>Urbit is the only personal computer left in the world.</p>
+        </section>  
+
+        <img class="mw7 db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
+        
+        <section class="measure-wide center pt8">
+          <p>Dear You,</p>
+
+          <p>A while back, you asked me what a computer was.</p>
+          <p>Do you remember?</p>
+          <p>I remember struggling to explain why computers were beautiful, why computers were mysterious, why computers were still worth talking about, why they were still worth redefining, really.</p>
+          <p>Recently I discovered a project named Urbit.</p>
+          <p>You should check it out, and we can talk about computers again soon.</p>
+          <p>I think Urbit is going to be very important someday.</p>
+          <p>Love,</p>
+          <p>Edouard</p>
         </section>
-        <section class="measure-wide mt6">
-          <p>New: <span class="new-green1">Tlon Hosting Services</span></p>
-          <p>For a limited time, Urbit node hosting will be available for free.</p>
-          <p>Soon: Experience a simple, always-on, zero-maintenance, actually-yours, completely portable, personal cloud computer.</p>
-              <form action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form mt6" target="_blank"
-                novalidate>
-                <div class="input-group" id="mc_embed_signup_scroll">
-                  <div class="mc-field-group w-100 flex">
-                    <div class="relative w-100 mw5 mb2">
-                    <input class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7  " type="email" name="EMAIL"
-                      id="mce-EMAIL" placeholder="zod@urbit.org" required>
-                      <span class="relative"></span>
-                      </div>
-                    <button id="mc-embedded-subscribe" class="ml1 br1 dib bn bg-custom-green1 white flex-shrink-0 ph4 wk-appearance-none"
-                      style="font-family: 'Inter UI', san-serif; height: 36px;" type="submit"
-                      name="subscribe">
-                      Join Waitlist
-                    </button>
+
+        <section class="measure-wide center pt8">
+          <p>Tlon makes using Urbit simple and easy.</p>
+          <p>In late 2020 we'll start opening this service up to the public. We're looking for people who want to escape the chaos of the internet to build real, lasting communities.</p>
+          <p>Subscribe below to receive Tlon product and service updates.</p>
+          <form 
+            action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
+            method="post" 
+            id="mc-embedded-subscribe-form" 
+            name="mc-embedded-subscribe-form" 
+            class="validate form mt6" 
+            target="_blank"
+            novalidate
+          >
+            <div class="input-group" id="mc_embed_signup_scroll">
+              <div class="mc-field-group w-100 flex">
+                <div class="relative w-100 mw5 mb2">
+                  <input 
+                  class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7 f8"
+                  style="height: 36px;"
+                  type="email" 
+                  name="EMAIL"
+                  id="mce-EMAIL" 
+                  placeholder="zod@urbit.org" 
+                  required>
+                  <span class="relative"></span>
+                </div>
+
+                <button 
+                  id="mc-embedded-subscribe" 
+                  class="ml1 br1 dib bn bg-black white flex-shrink-0 ph4 wk-appearance-none f8"
+                  style="font-family: 'Inter UI', san-serif; height: 36px;" 
+                  type="submit"
+                  name="subscribe">
+                  Join Waitlist
+                </button>
+
                   </div>
                 </div>
-              </form>
+          </form>
         </section>
-    </main>
-    <footer class="cf">
+
+    <footer class="measure-wide center tc pv8 mt8">
         <a href="https://urbit.org/privacy">Privacy Policy</a>
         <a class="ml4" href="https://urbit.org/terms-of-use/">Terms of Service</a>
         <a class="ml4" href="mailto:support@tlon.io">support@tlon.io</a>
