ed: restructured typography, grammar edits, etc.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,66 +5,95 @@
         <meta name="viewport" content="width=device-width">
         <title>Tlon Corporation</title>
     </head>
-    <body class="flex-auto f6">
-        <section class="measure-wide center tc mt10">
-            <p>Urbit is the only personal computer left in the world.</p>
-        </section>  
+    <body class="flex-auto f3-s f6-l">
+      <section class="measure-wide-ns center tc mt10">
+        <p>Leave the internet behind.</p>
+      </section>  
 
-        <img class="mw7 db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
-        
-        <section class="measure-wide center pt8">
-          <p>Dear You,</p>
+      <img class="mw7 db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
+      
+      <section class="measure-wide center pt8">
+        <p>We built a calm, safe, and beautiful place to build lasting communities and new cultures because we couldn't find one anywhere else.</p> 
+        <p>This is Urbit:<br>
+        It's simple, designed to last forever, and belongs to you 100%.</p>
+        <p>Soon, you can try Urbit yourself:</p>
+        <form 
+          action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
+          method="post" 
+          id="mc-embedded-subscribe-form" 
+          name="mc-embedded-subscribe-form" 
+          class="validate form mt6" 
+          target="_blank"
+          novalidate
+        >
+          <div class="input-group" id="mc_embed_signup_scroll">
+            <div class="mc-field-group w-100 flex">
+              <div class="relative w-100 mw5 mb2">
+                <input 
+                class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7 f8"
+                style="height: 36px;"
+                type="email" 
+                name="EMAIL"
+                id="mce-EMAIL" 
+                placeholder="zod@urbit.org" 
+                required>
+                <span class="relative"></span>
+              </div>
 
-          <p>A while back, you asked me what a computer was.</p>
-          <p>Do you remember?</p>
-          <p>I remember struggling to explain why computers were beautiful, why computers were mysterious, why computers were still worth talking about, why they were still worth redefining, really.</p>
-          <p>Recently I discovered a project named Urbit.</p>
-          <p>You should check it out, and we can talk about computers again soon.</p>
-          <p>I think Urbit is going to be very important someday.</p>
-          <p>Love,</p>
-          <p>Edouard</p>
-        </section>
+              <button 
+                id="mc-embedded-subscribe" 
+                class="ml1 br1 dib bn bg-black white flex-shrink-0 ph4 wk-appearance-none f8"
+                style="font-family: 'Inter UI', san-serif; height: 36px;" 
+                type="submit"
+                name="subscribe">
+                Join Waitlist
+              </button>
 
-        <section class="measure-wide center pt8">
-          <p>Tlon makes using Urbit simple and easy.</p>
-          <p>In late 2020 we'll start opening this service up to the public. We're looking for people who want to escape the chaos of the internet to build real, lasting communities.</p>
-          <p>Subscribe below to receive Tlon product and service updates.</p>
-          <form 
-            action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
-            method="post" 
-            id="mc-embedded-subscribe-form" 
-            name="mc-embedded-subscribe-form" 
-            class="validate form mt6" 
-            target="_blank"
-            novalidate
-          >
-            <div class="input-group" id="mc_embed_signup_scroll">
-              <div class="mc-field-group w-100 flex">
-                <div class="relative w-100 mw5 mb2">
-                  <input 
-                  class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7 f8"
-                  style="height: 36px;"
-                  type="email" 
-                  name="EMAIL"
-                  id="mce-EMAIL" 
-                  placeholder="zod@urbit.org" 
-                  required>
-                  <span class="relative"></span>
                 </div>
+              </div>
+        </form>
+        <p>Urbit is for bringing together a group to chat, write, and share links. Urbit is also a general-purpose digital environment, so it will grow new and exciting capabilities in due time. There are no ads, no tracking and no lock-in. Your Urbit data and identity are yours to keep, forever.</p>
+        <p>At Tlon, we find today's megacorp platforms to be frustrating to use, often creepy, and mostly disappointing. We wanted a way to build high-trust communities, to keep our data forever, and to explore what's possible when people control their own software.</p>
+        <p>We didn't want to solve this problem halfway - we wanted a lasting solution. So we started from scratch with a new, radically simple computing platform. Urbit makes it possible for an individual to control their own programs and data; Tlon makes it possible for anyone to use Urbit without ever touching the command line.</p>
+        <p>We don't want to juggle a mess of apps and we don't want to depend on giant platforms to make cloud computing possible. Urbit is the beginning of a new kind of personal cloud computing.</p>
+        <p>With our forthcoming release of new Urbit hosting services, owning and using the world's last personal computer will be easier than ever.</p>
+        <p>We'll let you know when more capacity is available:</p>
+        <form 
+          action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
+          method="post" 
+          id="mc-embedded-subscribe-form" 
+          name="mc-embedded-subscribe-form" 
+          class="validate form mt6" 
+          target="_blank"
+          novalidate
+        >
+          <div class="input-group" id="mc_embed_signup_scroll">
+            <div class="mc-field-group w-100 flex">
+              <div class="relative w-100 mw5 mb2">
+                <input 
+                class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7 f8"
+                style="height: 36px;"
+                type="email" 
+                name="EMAIL"
+                id="mce-EMAIL" 
+                placeholder="zod@urbit.org" 
+                required>
+                <span class="relative"></span>
+              </div>
 
-                <button 
-                  id="mc-embedded-subscribe" 
-                  class="ml1 br1 dib bn bg-black white flex-shrink-0 ph4 wk-appearance-none f8"
-                  style="font-family: 'Inter UI', san-serif; height: 36px;" 
-                  type="submit"
-                  name="subscribe">
-                  Join Waitlist
-                </button>
+              <button 
+                id="mc-embedded-subscribe" 
+                class="ml1 br1 dib bn bg-black white flex-shrink-0 ph4 wk-appearance-none f8"
+                style="font-family: 'Inter UI', san-serif; height: 36px;" 
+                type="submit"
+                name="subscribe">
+                Join Waitlist
+              </button>
 
-                  </div>
                 </div>
-          </form>
-        </section>
+              </div>
+        </form>
+      </section>
 
     <footer class="measure-wide center tc pv8 mt8">
         <a href="https://urbit.org/privacy">Privacy Policy</a>
